--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "heymexa@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "froala-editor": "^3.0.5",
-    "froala-images-multi-upload": "git+https://github.com/heymexa/froala-images-multi-upload.git"
+    "froala-editor": "^2.9.5",
+    "froala-images-multi-upload": "git+https://github.com/heymexa/froala-images-multi-upload.git",
+    "jquery": "^1.12.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
