--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "license": "MIT",
   "dependencies": {
     "froala-editor": "^3.0.5",
-    "froala-images-multi-upload": "git+https://github.com/heymexa/froala-images-multi-upload.git"
+    "froala-images-multi-upload": "git+https://github.com/heymexa/froala-images-multi-upload.git#v2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "webpack": "^4.40.2",
+    "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1"
   }
